# VehicleinsuranceMLOPS

./: app.py  pyproject.toml  setup.py
notebook/: exp-notebook.ipynb  mongoDB_demo.ipynb
src.egg-info/: PKG-INFO
src/cloud_storage/: aws_storage.py
src/components/: data_transformation.py  model_trainer.py
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/entity/: estimator.py
src/exception/: __init__.py
src/utils/: main_utils.py
